--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerTorneoAjedrez.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/VerTorneoAjedrez.form
@@ -48,27 +48,47 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="NombreTorneo1" alignment="0" min="-2" pref="196" max="-2" attributes="0"/>
-                              <Component id="VerDatosTorneo1" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="NombreTorneo3" alignment="0" min="-2" pref="204" max="-2" attributes="0"/>
-                              <Component id="VerDatosTorneo3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="VerDatosTorneo4" min="-2" max="-2" attributes="0"/>
-                              <Component id="NombreTorneo4" min="-2" max="-2" attributes="0"/>
-                              <Component id="VerDatosTorneo2" min="-2" max="-2" attributes="0"/>
-                              <Component id="NombreTorneo2" min="-2" max="-2" attributes="0"/>
+                              <Component id="NombreTorneo1" alignment="1" min="-2" pref="196" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
-                          <Component id="BotonAtras" min="-2" pref="144" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="BotonSalir" min="-2" pref="143" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
+                          <Component id="VerDatosTorneo1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
+                          <Component id="VerDatosTorneo3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="63" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="VerDatosTorneo4" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Component id="VerDatosTorneo2" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace pref="61" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="NombreTorneo2" min="-2" max="-2" attributes="0"/>
+                              <Component id="NombreTorneo4" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+              </Group>
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                  <Component id="BotonAtras" min="-2" pref="144" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="BotonSalir" min="-2" pref="143" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -80,27 +100,27 @@
                       <Component id="NombreTorneo1" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="NombreTorneo2" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="VerDatosTorneo1" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="VerDatosTorneo2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="NombreTorneo3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="NombreTorneo4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="VerDatosTorneo2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="VerDatosTorneo1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="VerDatosTorneo3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="VerDatosTorneo4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="NombreTorneo4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="NombreTorneo3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                  <EmptySpace pref="22" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="VerDatosTorneo4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="VerDatosTorneo3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="BotonAtras" alignment="3" max="32767" attributes="0"/>
                       <Component id="BotonSalir" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
